Add Juna Geotagger Swift native macOS app
- SwiftUI app with NavigationSplitView layout
- Models: PhotoItem, GPXTrack
- Services: GPXParser (XMLParser), PhotoMetadataService (ImageIO), GeotagEngine
- Views: ContentView, PhotoListView, MapPanelView
- MainViewModel with @Observable, Swift 6 strict concurrency safe
- Drag & drop support for photos and GPX files
- MapKit integration for GPX tracks and photo locations
- QLThumbnailGenerator for HEIC thumbnail support
- SPM-based build (Package.swift, macOS 14+)

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,21 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
+# Xcode
+build/
+DerivedData/
+*.xcodeproj/xcuserdata/
+*.xcworkspace/xcuserdata/
+*.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 
-# Virtual environment
-.venv/
-venv/
-ENV/
+# Swift Package Manager
+.build/
+.swiftpm/
+Packages/
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
+# macOS
 .DS_Store
-Thumbs.db
+*.swp
+*~
 
-# Test photos/data (adjust as needed)
-*.jpg
-*.jpeg
-*.JPG
-*.JPEG
-*.gpx
+# Python (legacy)
+__pycache__/
+*.pyc
+.venv/
