Add localization: Korean, English, French, Japanese
- Localizable.strings for ko/en/fr/ja (80+ keys each)
- All UI strings use String(localized:) for auto OS language detection
- Filter and sort enums use localized .label property
- Updated project.yml to include Resources directory
- Regenerated .xcodeproj

--- a/project.yml
+++ b/project.yml
@@ -6,6 +6,7 @@ options:
   xcodeVersion: "16.0"
   createIntermediateGroups: true
   generateEmptyDirectories: false
+  defaultConfig: Release
 
 settings:
   base:
@@ -18,6 +19,10 @@ targets:
     platform: macOS
     sources:
       - path: JunaGeotagger
+        excludes:
+          - "Resources/**"
+    resources:
+      - path: JunaGeotagger/Resources
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.aumosita.JunaGeotagger
